# r-teleswift-bot-update

./: README.md  app.py  bot.py  config.py  main.py  pyproject.toml  render.yaml  requirements.txt  sample.env
TechVJ/: __init__.py  broadcast.py  cancel.py  download.py  generate.py  help.py  start.py  strings.py
database/: __init__.py  db.py
