[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "motor>=3.7.1",
    "psycopg2-binary>=2.9.10",
    "pyrofork>=2.3.68",
    "pyrogram>=2.0.106",
    "tgcrypto>=1.2.5",
]
